# Doom2D-Forever

./: .editorconfig  .gitignore  BUILD.md  CMakeLists.txt  README  build.bat  extract_assets.bat  import_maps.bat  organize_assets.bat  run_engine.bat  run_game.bat  run_level_editor.bat  run_rivet.bat  vcpkg.json
src/d2df/: CMakeLists.txt
src/d2df/include/d2df/app/: content_paths.hpp  game_app.hpp  main_menu.hpp  map_viewer.hpp
src/d2df/include/d2df/audio/: player_continuous_sfx.hpp  sound_system.hpp
src/d2df/include/d2df/core/: event_bus.hpp  fixed_timestep.hpp  game_events.hpp  log.hpp  perf_stats.hpp  resource_audit.hpp  service_registry.hpp  types.hpp
src/d2df/include/d2df/debug/: debug_context.hpp  debug_draw.hpp  debug_panel.hpp  debug_ui.hpp  debug_world_view.hpp
src/d2df/include/d2df/ecs/: game_world.hpp
src/d2df/include/d2df/map/: area_types.hpp  item_types.hpp  key_types.hpp  map_catalog.hpp  map_document.hpp  map_json_loader.hpp  map_spawn.hpp  monster_types.hpp  panel_types.hpp  trigger_types.hpp
src/d2df/include/d2df/net/: local_simulation_authority.hpp  network_transport.hpp  null_network_transport.hpp  simulation_authority.hpp
src/d2df/include/d2df/render/: camera2d.hpp  hud_layout.hpp  map_render_index.hpp  map_renderer.hpp  text_renderer.hpp  texture_cache.hpp
src/d2df/include/d2df/resources/: asset_database.hpp  content_catalog.hpp  legacy_ref.hpp
src/d2df/include/d2df/sim/: combat_common.hpp  effect_types.hpp  game_rules.hpp  game_save.hpp  item_system.hpp  lift_system.hpp  map_collision.hpp  monster_system.hpp  player_corpse_system.hpp  player_state.hpp  player_types.hpp  projectile_system.hpp  projectile_types.hpp  shootable_target.hpp  trigger_system.hpp  weapon_system.hpp  weapon_types.hpp
src/d2df/src/app/: content_paths.cpp  game_app.cpp  main_menu.cpp  map_viewer.cpp
src/d2df/src/audio/: player_continuous_sfx.cpp  sound_system.cpp
src/d2df/src/core/: fixed_timestep.cpp  perf_stats.cpp  resource_audit.cpp
src/d2df/src/debug/: debug_draw.cpp  debug_ui.cpp
src/d2df/src/debug/panels/: collision_debug_panel.cpp  perf_debug_panel.cpp  tiles_debug_panel.cpp
src/d2df/src/ecs/: game_world.cpp
src/d2df/src/map/: area_types.cpp  item_types.cpp  key_types.cpp  map_catalog.cpp  map_json_loader.cpp  map_spawn.cpp  monster_types.cpp  panel_types.cpp  trigger_types.cpp
src/d2df/src/render/: camera2d.cpp  hud_layout.cpp  map_render_index.cpp  map_renderer.cpp  text_renderer.cpp  texture_cache.cpp
src/d2df/src/resources/: asset_database.cpp  content_catalog.cpp  legacy_ref.cpp
src/d2df/src/sim/: combat_common.cpp  effect_types.cpp  game_save.cpp  item_system.cpp  lift_system.cpp  map_collision.cpp  monster_system.cpp  player_corpse_system.cpp  player_state.cpp  player_types.cpp  projectile_system.cpp  projectile_types.cpp  shootable_target.cpp  trigger_system.cpp  weapon_system.cpp  weapon_types.cpp
src/d2df_client/: CMakeLists.txt  main.cpp
src/d2df_engine_playground/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt
src/engine/include/rivet/: api.hpp  engine.hpp
src/engine/include/rivet/audio/: audio_system.hpp
src/engine/include/rivet/core/: application.hpp  clock.hpp  event_bus.hpp  fixed_timestep.hpp  game.hpp  game_context.hpp  log.hpp  service_registry.hpp  types.hpp
src/engine/include/rivet/ecs/: world.hpp
src/engine/include/rivet/input/: input_system.hpp  keys.hpp
src/engine/include/rivet/mod/: api.hpp  command.hpp  command_router.hpp  data_query.hpp  event.hpp  event_hub.hpp  variant.hpp
src/engine/include/rivet/physics/: aabb.hpp  character_controller.hpp  fluid_grid.hpp  physics_world.hpp  spatial_grid.hpp  tile_collider.hpp
src/engine/include/rivet/platform/: bootstrap.hpp  platform.hpp  sdl_platform.hpp  sdl_services.hpp  window_config.hpp
src/engine/include/rivet/render/: camera2d.hpp  color.hpp  irenderer.hpp  rect.hpp  renderer_backend.hpp  renderer_factory.hpp  sdl_renderer.hpp
src/engine/include/rivet/resources/: png_writer.hpp  (+2 more)
src/engine/src/audio/: audio_system.cpp
src/engine/src/core/: application.cpp  clock.cpp  event_bus.cpp  fixed_timestep.cpp  game_context.cpp
src/engine/src/ecs/: engine_world.cpp  world.cpp
src/engine/src/input/: input_system.cpp
src/engine/src/map/: entity_catalog.cpp  legacy_map_adapter.cpp  map_loader.cpp  tile_map_json.cpp  tile_map_sync.cpp
src/engine/src/mod/: api.cpp  command_router.cpp  data_query.cpp  event_hub.cpp
src/engine/src/physics/: aabb.cpp  character_controller.cpp  collision_world.cpp  entity_collision.cpp  fluid_grid.cpp  physics_world.cpp  spatial_grid.cpp  tile_collider.cpp
src/engine/src/platform/: bootstrap.cpp  sdl_platform.cpp
src/engine/src/render/: camera2d.cpp  renderer_backend.cpp  renderer_factory.cpp  sdl_renderer.cpp  tile_map_render_index.cpp  tile_map_renderer.cpp
src/engine/src/resources/: png_writer.cpp  resource_manager.cpp
src/engine/src/runtime/: map_session.cpp
src/engine/src/scene/: scene.cpp  scene_manager.cpp
src/game/: CMakeLists.txt
src/game/src/: bounce_game.cpp  bounce_scene.cpp  game_catalog.cpp  game_map_bundle.cpp  gameplay_session.cpp  level_game.cpp  level_scene.cpp  sandbox_game.cpp  sandbox_scene.cpp
src/game/src/content/: content_paths.cpp
src/game/src/level/: level_loader.cpp  level_saver.cpp  level_spawner.cpp
src/game/src/model/: model_animator.cpp  model_loader.cpp  model_types.cpp
src/game/src/resources/: resource_pack.cpp
src/game/src/tileset/: tileset_catalog.cpp
tests/: CMakeLists.txt  test_archive.cpp  test_engine.cpp  test_event_bus.cpp  test_game.cpp  test_level.cpp  test_map_import.cpp  test_map_viewer.cpp  test_organize.cpp  test_perf.cpp  test_services.cpp  test_sim.cpp
tools/lib/d2df_archive/: CMakeLists.txt
tools/lib/d2df_archive/src/: archive.cpp  binary_reader.cpp  content_validate.cpp  extract_pipeline.cpp  ffmpeg_util.cpp  format_sniff.cpp  json_util.cpp  legacy_map.cpp  map_enum_names.cpp  map_import_pipeline.cpp  map_json.cpp  nested_resource.cpp  organize_pipeline.cpp  slug.cpp  staging_manifest.cpp  text_encoding.cpp  zlib_util.cpp
(+154 files in other folders)
